<resources>
    <string name="app_name">ShareIt</string>
    <string name="signinemail_email">Email</string>
    <string name="signinemail_password">Contraseña</string>
    <string name="signin_acceder">Acceder</string>
    <string name="signin_registrarse">¿No tienes cuenta aún? ¡Regístrate!</string>

    <string name="recordarcontraseña">o inicia sesion con</string>
    <string name="registro_con_google">Acceder con Google</string>
    <string name="registro_con_facebook">Acceder con Facebook</string>
    <string name="registro_con_email">Acceder con Email</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="perfil">Perfil</string>
    <string name="comunidades">Comunidades</string>
    <string name="productos">Productos/Servicios</string>
    <string name="ajustes">Ajustes</string>
    <string name="acercaDe">Acerca de</string>
    <string name="salir">Cerrar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">QUÉ ES SHAREIT</string>

    <!-- Facebook -->
    <string name="facebook_app_id">1761019244193009</string>
    <string name="fb_login_protocol_scheme">fb1761019244193009</string>

    <string name="nombreProducto">PRODUCTO</string>
    <string name="ofertas">Oferta</string>
    <string name="texto_acercade">Shareit , nace como una solución al problema que no es encontramos
        en la vida diaria como por ejemplo cuando necesitamos un taladro y no tenemos, alguien que nos
        riegue las plantas ya sea por falta de tiempo o no disponer de el. Shareit te ofrece una solución
        sencilla, una aplicación dirigida hacia las comunidades de vecinos en las cuales podrás hacer una
        propuesta solicitando la ayuda que necesites al igual que podrás ofrecerte para ayudar a otros vecinos. </string>

</resources>
