<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/idTop">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/persona"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_comunidades"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/comunidades" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/productos" />
    </group>


        <group android:checkableBehavior="single"
            android:id="@+id/idBottom">
            <item
                android:id="@+id/nav_ajustes"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/ajustes" />
            <item
                android:id="@+id/nav_acerdaDe"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/acercaDe" />
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/salir" />
        </group>


</menu>
